[package]
name = "rustc-stable-hash"
version = "0.1.0"
description = "A stable hashing algorithm used by rustc"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/rust-lang/rustc-stable-hash"
edition = "2021"

[dependencies]
blake2 = { version = "0.10.0", default-features = false, optional = true }

[features]
default = ["blake2"]
nightly = [] # for feature(hasher_prefixfree_extras)
